--- a/HTML-Intermediate/programming-langages.html
+++ b/HTML-Intermediate/programming-langages.html
@@ -19,7 +19,7 @@
     <hr>
     <main>
         <h1>Here is the main section of our page - it consists of a new articles</h1>
-        <article>>
+        <article>
             <h1>Article 1 - 1995 was a pretty crazy year for programming languages!</h1>
             <p>Don't believe me? Just check this table out:</p>
             <table>
@@ -32,12 +32,76 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td></td>
+                        <td>C++</td>
+                        <td>Bjarne Stroustrup</td>
+                        <td>1983</td>
+                    </tr>
+                    <tr>
+                        <td>Python</td>
+                        <td>Guido van Rossum</td>
+                        <td>1991</td>
+                    </tr>
+                    <tr>
+                        <td>Ruby</td>
+                        <td>Yukihiro Matsumoto ("Matz")</td>
+                        <td>1995</td>
+                    </tr>
+                    <tr>
+                        <td>JavaScript</td>
+                        <td>Brendan Eich</td>
+                        <td>1995</td>
+                    </tr>
+                    <tr>
+                        <td>Java</td>
+                        <td>James Gosling</td>
+                        <td>1995</td>
+                    </tr>
+                    <tr>
+                        <td>PHP</td>
+                        <td>Rasmus Lerdorf</td>
+                        <td>1995</td>
                     </tr>
                 </tbody>
-            </table>
+                </table>
         </article>
+        <article>
+            <h1>Article 2 - Coming soon...</h1>
+        </article>
+        <section>
+            <h1>Contact us!</h1>
+            <section>
+                <h1>General Information</h1>
+                <form action="#" method="get">
+                    First Name <input type="text" name="first" id=""><br>
+                    Last Name <input type="text" name="last" id=""><br>
+                    Email <input type="email" name="email" id=""><br>
+                    Date Of Birth <input type="date" name="dob" id=""><br>
+                </form>
+            </section>
+            <section>
+                <h1>Essential Questions</h1>
+
+                <p>What kind of work do you need?</p>
+
+                Programming: <input type="checkbox" name="programming" id=""><br>
+                Design:<input type="checkbox" name="design" id=""><br>
+                Singing:<input type="checkbox" name="singing" id=""><br>
+                Comedy:<input type="checkbox" name="comedy" id=""><br>
+
+                <p>How interested are you in our design skills?</p>
+
+                Very Low <input type="radio" name="interested" value="very low"><br>
+                Low<input type="radio" name="interested" value="low"><br>
+                Medium<input type="radio" name="interested" value="medium"><br>
+                High<input type="radio" name="interested" value="high"><br>
+                Very High<input type="radio" name="interested" value="very high"><br>
+                <button type="submit">Submit me!</button>
+            </section>
+        </section>
     </main>
+    <footer>
+        Here is our footer - let's make sure we copyright &copy; this!
+    </footer>
 </body>
 
 </html>
